--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>react-starter-kit</title>
+    <title>firebase-test</title>
     <link rel="stylesheet" href="/build/app.css" charset="utf-8">
     <script type="text/javascript" src="/build/common.js"></script>
 </head>
