--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <title>firebase-test</title>
     <link rel="stylesheet" href="/build/app.css" charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="/build/common.js"></script>
-</head>
+    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
+    </head>
 
 <body>
     <div class="wrapper" id="mainContainer"></div>
